@@ -316,7 +316,19 @@ run_dll = Interpreter("py2exe.run_dll",
                       target_desc = "shared_library",
                       )
 
-interpreters = [run, run_w, run_dll]
+run_isapi = Interpreter("py2exe.run_isapi",
+                      ["source/run_isapi.c", "source/start.c",
+                       "source/icon.rc"],
+                      libraries=["user32"],
+                      export_symbols=["HttpExtensionProc",
+                                      "GetExtensionVersion",
+                                      "TerminateExtension",
+                                      "GetFilterVersion", "HttpFilterProc",
+                                      "TerminateFilter"],
+                      target_desc = "shared_library",
+                      )
+
+interpreters = [run, run_w, run_dll, run_isapi]
 
 options = {"bdist_wininst": {"install_script": "py2exe_postinstall.py"}}
 
